<resources>
    <string name="app_name">GeekBrainsStopwatch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
<!--    My strings-->
    <string name="second_stopwatch_checkbox">Enable second stopwatch</string>
    <string name="digits_separator">:</string>
    <string name="hour_tip_text">HH</string>
    <string name="minutes_tip_text">MM</string>
    <string name="seconds_tip_text">SS</string>
    <string name="seconds_counter_text">SECONDS</string>
    <string name="start_button_text">start</string>
    <string name="stop_button_text">stop</string>
    <string name="third_stopwatch_checkbox">Enable third stopwatch</string>
    <string name="reset_button_text">Reset</string>
</resources>